# LoRa-HMI-Touch-Screen

./: .gitignore
Example/LoRaWAN_CLASS_C/LTS5_ESP32_PART/app_components/extra_lib/: CMakeLists.txt  sort.c  sort.h
Example/LoRaWAN_CLASS_C/LTS5_ESP32_PART/app_components/extra_lib/ui_alarm/: CMakeLists.txt  ui_alarm.c  ui_alarm.h  ui_alarm_events.c  ui_alarm_events.h
Example/LoRaWAN_CLASS_C/LTS5_ESP32_PART/app_components/extra_lib/ui_alarm/fonts/: ui_font_Font12.c  ui_font_Font16.c
Example/LoRaWAN_CLASS_C/LTS5_ESP32_PART/app_components/extra_lib/ui_alarm/images/: ui_img_alarm_png.c  ui_img_battery_empty_png.c  ui_img_battery_full_png.c  ui_img_cancel_set_top_png.c  ui_img_delete_png.c  ui_img_last_seen_png.c  ui_img_set_top_png.c  ui_img_signal_empty_png.c  ui_img_signal_full_png.c  ui_temporary_image.c
Example/LoRaWAN_CLASS_C/LTS5_ESP32_PART/app_components/extra_lib/ui_alarm/styles/: ui_alarm_style.c
Example/LoRaWAN_CLASS_C/LTS5_ESP32_PART/app_components/extra_lib/ui_button/: CMakeLists.txt  ui_button.c  ui_button.h  ui_button_events.c  ui_button_events.h
Example/LoRaWAN_CLASS_C/LTS5_ESP32_PART/app_components/extra_lib/ui_button/fonts/: ui_font_Font12.c  ui_font_Font16.c
Example/LoRaWAN_CLASS_C/LTS5_ESP32_PART/app_components/extra_lib/ui_button/images/: ui_img_battery_empty_png.c  ui_img_battery_full_png.c  ui_img_cancel_set_top_png.c  ui_img_delete_png.c  ui_img_last_seen_png.c  ui_img_set_top_png.c  ui_img_signal_empty_png.c  ui_img_signal_full_png.c  ui_temporary_image.c
Example/LoRaWAN_CLASS_C/LTS5_ESP32_PART/app_components/extra_lib/ui_button/styles/: ui_button_style.c
Example/LoRaWAN_CLASS_C/LTS5_ESP32_PART/app_components/extra_lib/ui_door/: CMakeLists.txt  ui_door.c  ui_door.h  ui_door_events.c  ui_door_events.h
Example/LoRaWAN_CLASS_C/LTS5_ESP32_PART/app_components/extra_lib/ui_door/fonts/: ui_font_Font12.c  ui_font_Font16.c
Example/LoRaWAN_CLASS_C/LTS5_ESP32_PART/app_components/extra_lib/ui_door/images/: ui_img_battery_empty_png.c  ui_img_battery_full_png.c  ui_img_cancel_set_top_png.c  ui_img_delete_png.c  ui_img_door_close_png.c  ui_img_door_open_png.c  ui_img_last_seen_png.c  ui_img_set_top_png.c  ui_img_signal_empty_png.c  ui_img_signal_full_png.c  ui_temporary_image.c
Example/LoRaWAN_CLASS_C/LTS5_ESP32_PART/app_components/extra_lib/ui_door/styles/: ui_door_style.c
Example/LoRaWAN_CLASS_C/LTS5_ESP32_PART/app_components/extra_lib/ui_occupied/: CMakeLists.txt  ui_occupied.c  ui_occupied.h  ui_occupied_events.c  ui_occupied_events.h
Example/LoRaWAN_CLASS_C/LTS5_ESP32_PART/app_components/extra_lib/ui_occupied/fonts/: ui_font_Font12.c  ui_font_Font16.c
Example/LoRaWAN_CLASS_C/LTS5_ESP32_PART/app_components/extra_lib/ui_occupied/images/: ui_img_arc_green_png.c  ui_img_arc_red_png.c  ui_img_battery_empty_png.c  ui_img_battery_full_png.c  ui_img_cancel_set_top_png.c  ui_img_delete_png.c  ui_img_last_seen_png.c  ui_img_set_top_png.c  ui_img_signal_empty_png.c  ui_img_signal_full_png.c  ui_temporary_image.c
Example/LoRaWAN_CLASS_C/LTS5_ESP32_PART/app_components/extra_lib/ui_occupied/styles/: ui_occupied_style.c
Example/LoRaWAN_CLASS_C/LTS5_ESP32_PART/app_components/extra_lib/ui_tem_hum/: CMakeLists.txt  ui_tem_hum.c  ui_tem_hum.h  ui_tem_hum_events.c  ui_tem_hum_events.h
Example/LoRaWAN_CLASS_C/LTS5_ESP32_PART/app_components/extra_lib/ui_tem_hum/fonts/: ui_font_Font12.c  ui_font_Font16.c
Example/LoRaWAN_CLASS_C/LTS5_ESP32_PART/app_components/extra_lib/ui_tem_hum/images/: ui_img_battery_empty_png.c  ui_img_battery_full_png.c  ui_img_cancel_set_top_png.c  ui_img_delete_png.c  ui_img_last_seen_png.c  ui_img_set_top_png.c  ui_img_signal_empty_png.c  ui_img_signal_full_png.c  ui_temporary_image.c
Example/LoRaWAN_CLASS_C/LTS5_ESP32_PART/app_components/extra_lib/ui_tem_hum/styles/: ui_tem_hum_style.c
Example/LoRaWAN_CLASS_C/LTS5_ESP32_PART/app_components/extra_lib/ui_water_leak/: CMakeLists.txt  ui_water_leak.c  ui_water_leak.h  ui_water_leak_events.c  ui_water_leak_events.h
Example/LoRaWAN_CLASS_C/LTS5_ESP32_PART/app_components/extra_lib/ui_water_leak/fonts/: ui_font_Font12.c  ui_font_Font16.c
Example/LoRaWAN_CLASS_C/LTS5_ESP32_PART/app_components/extra_lib/ui_water_leak/images/: ui_img_battery_empty_png.c  ui_img_battery_full_png.c  ui_img_cancel_set_top_png.c  ui_img_delete_png.c  ui_img_last_seen_png.c  ui_img_leaking_png.c  ui_img_normal_png.c  ui_img_set_top_png.c  ui_img_signal_empty_png.c  ui_img_signal_full_png.c  ui_temporary_image.c
Example/LoRaWAN_CLASS_C/LTS5_ESP32_PART/app_components/extra_lib/ui_water_leak/styles/: ui_water_leak_style.c
Example/LoRaWAN_CLASS_C/LTS5_ESP32_PART/app_components/ui/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h
Example/LoRaWAN_CLASS_C/LTS5_ESP32_PART/app_components/ui/ui/fonts/: ui_font_Font12.c  ui_font_Font16.c
Example/LoRaWAN_CLASS_C/LTS5_ESP32_PART/app_components/ui/ui/images/: ui_img_battery_png.c  ui_img_boot_logo_png.c  ui_img_common_108_png.c  ui_img_common_118_png.c  (+28 more)
(+94 files in other folders)
